--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -1,3 +1,4 @@
+<div data-ng-controller="JulkaisunsyottoController">
 <div class="row form-group">
     <div class="col-xs-12">
         <div class="row">
@@ -55,7 +56,7 @@
                                 </label>
                             </div>
                             <div class="col-md-8">
-                                <p>URN:NBN:fi-fe2018121851261</p>
+                                <p data-ng-model="filedata.urn">URN:NBN:fi-fe2018121851261</p>
                             </div>
                         </div>
                         <div class="row">
@@ -67,7 +68,7 @@
                             <div class="col-md-8">
                                 <div class="input-group pb">
                                     <input type="text" class="form-control" uib-datepicker-popup="{{format}}"
-                                           ng-model="julkaisufile.embargo" is-open="popup.opened"
+                                           data-ng-model="filedata.embargo" is-open="popup.opened"
                                            datepicker-options="dateOptions"
                                            show-button-bar="false" placeholder="vvvv-kk-pp"/>
                                     <span ng-click="openDatepicker()" class="input-group-addon"><i class="fa fa-calendar"></i></span>
@@ -75,6 +76,7 @@
                                 <div>
                                     <button type="button" class="btn btn-sm btn-default" ng-click="setMonth()">Puolen vuoden päähän</button>
                                     <button type="button" class="btn btn-sm btn-default" ng-click="setYear()">Vuoden päähän</button>
+                                    <button type="button" class="btn btn-sm btn-default" ng-click="upload(file)">Tallenna</button>
                                 </div>
                             </div>
                             </div>
@@ -143,7 +145,7 @@
     </button>
 </div>
 
-
+</div>
 
 <!--<span class="progress" ng-show="file.progress >= 0">-->
     <!--<div style="width:{{file.progress}}%"-->
