Make user always go to enter publication tab

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1446,23 +1446,12 @@
 <!-- JATKA -->
 <div class="row form-group">
   <!-- <div class="row"> -->
-  <div class="col-md-6">
-    <button class="btn btn-lg btn-block btn-primary"
-            type="button"
-            data-ng-click="useVaihe(5)">
-      {{i18n.content.tietojensyotto.jatka[lang]}}
-    </button>
-  </div>
-  <div class="col-md-1 d-flex align-items-center justify-content-center">
-    <div class="h3">
-      TAI
-    </div>
-  </div>
-  <div class="col-md-5">
+  <div class="col-md-12">
     <button class="btn btn-lg btn-block btn-primary"
             type="button"
             data-ng-click="useVaihe(4)">
-      Syötä julkaisu
+      Siirry rinnakkaistallennuksen valintaan
+      <!--{{i18n.content.tietojensyotto.jatka[lang]}}-->
     </button>
   </div>
 </div>
@@ -1477,5 +1466,3 @@
     </div>
   </div>
 </div>
-<!-- </div> -->
-<!--</div>-->
