Update file upload file same as feature publication input branch

--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -50,6 +50,10 @@
   display: inline-block;
 }
 
+*:focus {
+  outline: none !important;
+}
+
 @mixin input() {
   border-radius: $input-border-radius;
 }
