Get VIRTA and Crossref prefill data list from same endpoint

--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -76,7 +76,7 @@
 
   </div>
   <div class="text-center">
-    <i class="fa fa-spinner fa-spin fa-2x" data-ng-show="crossrefLataa||virtaLataa"></i>
+    <i class="fa fa-spinner fa-spin fa-2x" data-ng-show="crossrefTaiVirtaLataa"></i>
   </div>
 </div>
 
