--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1398,7 +1398,7 @@
   <!-- Kenttä: Julkaisu rinnakkaistallennettu -->
   <div class="row form-group"
     id="julkaisurinnakkaistallennettuGroup"
-    data-ng-if="isFieldVisible('julkaisurinnakkaistallennettu')">
+    >
     <div class="col-sm-4 col-xs-12">
       <label class="control-label"
         data-ng-bind="i18n.content.form.julkaisurinnakkaistallennettu[lang]">
@@ -1441,7 +1441,7 @@
 
   <!-- Kenttä: Rinnakkaistallennetun version verkko-osoite -->
   <div class="row form-group"
-    data-ng-if="isFieldVisible('rinnakkaistallennetunversionverkkoosoite') && justus.julkaisu.julkaisurinnakkaistallennettu === '1'"
+    data-ng-if="justus.julkaisu.julkaisurinnakkaistallennettu === '1'"
     id="rinnakkaistallennetunversionverkkoosoiteGroup">
     <div class="col-sm-4 col-xs-12">
       <label class="control-label"
