Get users language from backend and if user changes lang send selected language to backend

--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -58,7 +58,7 @@
         <option value="member">Member</option>
       </select>
       <select data-ng-model="selectedDemoUserOrganizationCode" data-ng-change="setDemoUserOrganization(selectedDemoUserOrganizationCode)">
-        <option data-ng-repeat="organization in codes.organization" value="{{organization.arvo}}">{{organization.arvo}}: {{organization.selite}}</option>
+        <option data-ng-repeat="organization in organisationList" value="{{organization.arvo}}">{{organization.arvo}}: {{organization.selite}}</option>
       </select>
     </span>
     
