--- a/src/app/html/index_part.html
+++ b/src/app/html/index_part.html
@@ -22,43 +22,17 @@
         <i class="fa fa-question-circle justus-info"></i> {{i18n.header.help[lang]}}
       </a>
     </span>
-
-
     <h4 data-ng-bind="i18n.etusivu.help.organization[lang]"></h4>
     <div class="row">
-      <div ng-if="lang === 'FI'">
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListFI" data-ng-if="$index < organizationListFI.length/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListFI" data-ng-if="$index >= organizationListFI.length/3 && $index < organizationListFI.length*2/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListFI" data-ng-if="$index >= organizationListFI.length*2/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-      </div>
-      <div ng-if="lang === 'SV'">
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListSV" data-ng-if="$index < organizationListSV.length/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListSV" data-ng-if="$index >= organizationListSV.length/3 && $index < organizationListSV.length*2/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListSV" data-ng-if="$index >= organizationListSV.length*2/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-      </div>
-      <div ng-if="lang === 'EN'">
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListEN" data-ng-if="$index < organizationListEN.length/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListEN" data-ng-if="$index >= organizationListEN.length/3 && $index < organizationListEN.length*2/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <span data-ng-repeat="o in organizationListEN" data-ng-if="$index >= organizationListEN.length*2/3"><span data-ng-bind="o"></span><br></span>
-          </div>
-      </div>
+        <div class="col-xs-12 col-sm-4">
+            <span data-ng-repeat="o in organisationNameList" data-ng-if="$index < organisationNameList.length/3"><span data-ng-bind="o"></span><br></span>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <span data-ng-repeat="o in organisationNameList" data-ng-if="$index >= organisationNameList.length/3 && $index < organisationNameList.length*2/3"><span data-ng-bind="o"></span><br></span>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <span data-ng-repeat="o in organisationNameList" data-ng-if="$index >= organisationNameList.length*2/3"><span data-ng-bind="o"></span><br></span>
+        </div>
     </div>
   </div>
 </div>
