--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -172,7 +172,7 @@
             data-ng-click="useKopioiTekijat(justus.julkaisu.tekijat)"
             data-ng-show="justus.julkaisu.tekijat && !(justus.organisaatiotekija[0].sukunimi || justus.organisaatiotekija[0].etunimet)"
             data-popover-trigger="'mouseenter'"
-            tdata-popover-placement="right"
+            data-popover-placement="right"
             data-uib-popover="{{i18n.content.form.organisaatiotekija.kopioi.tooltip[lang]}}"
             data-ng-bind="i18n.content.form.organisaatiotekija.kopioi[lang]">
           </span>
