--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -1,7 +1,7 @@
 <div data-ng-controller="JulkaisunsyottoController">
 <div class="row form-group">
     <div class="col-xs-12">
-        <div class="row">
+        <div data-ng-show="showPublicationInput" class="row">
             <div class="col-xs-12">
                 <button class="col-xs-12 justus-btn justus-btn-tyyppi"
                         data-ng-disabled="rinnakkaistallennettumuualle"
